compiler/tests/run_pass/region_inline_map.lg
/* Copyright 2014 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

task bar(r: region<int>, x: int@r)
  , reads(r), writes(r)
{
  *x += 10;
}

task foo(s: region<int>, r: region<int>, x: int@r)
  , reads(r), writes(r)
{
  *x += 1;
  bar(r, x);
  *x += 100;
}

task main()
{
  let r = region<int>(1);
  let x = new<int@r>();
  let p = partition<r, disjoint>(color(coloring<r>(), x, 0));
  let s = p[0];
  *x = 0;
  foo(s, r, x);
  assert *x == 111;
}
